test/corpus/scf.txt
==================
file scf
==================

&CONTROL
  calculation = 'scf'
  etot_conv_thr =   2.0000000000d-05
  forc_conv_thr =   1.0000000000d-04
  max_seconds =   4.1040000000d+04
  outdir = './out/'
  prefix = 'Cu'
  pseudo_dir = '../../pseudo/'
  tprnfor = .true.
  tstress = .true.
  verbosity = 'high'
/
&SYSTEM
  degauss =   1.0000000000d-02
  ecutrho =   440.0
  ecutwfc =   55.0
  ibrav = 0
  nat = 1
  nosym = .false.
  ntyp = 1
  occupations = 'smearing'
  smearing = 'cold'
/
&ELECTRONS
  conv_thr =   4.0000000000d-10
  electron_maxstep = 80
  mixing_beta =   4.0000000000d-01
/
ATOMIC_SPECIES
Cu     55.85 cu_pbesol_v1.2.uspp.F.UPF
ATOMIC_POSITIONS crystal
Cu         0.0000000000       0.0000000000       0.0000000000
K_POINTS automatic
4 4 4 0 0 0
CELL_PARAMETERS angstrom
   -1.4430983361036    1.4430983361036    1.3630841209524
    1.4430983361036   -1.4430983361036    1.3630841209524
    1.4430983361036    1.4430983361036   -1.3630841209524

---

(document
  (namelist
    (keyword)
    (pair
      (identifier)
      (string))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (string))
    (pair
      (identifier)
      (string))
    (pair
      (identifier)
      (string))
    (pair
      (identifier)
      (boolean))
    (pair
      (identifier)
      (boolean))
    (pair
      (identifier)
      (string)))
  (namelist
    (keyword)
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (boolean))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (string))
    (pair
      (identifier)
      (string)))
  (namelist
    (keyword)
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (number))
    (pair
      (identifier)
      (number)))
  (atomic_species
    (identifier)
    (number)
    (string))
  (atomic_positions
    (identifier)
    (identifier)
    (vec3
      (number)
      (number)
      (number)))
  (k_points
    (identifier)
    (vec3
      (number)
      (number)
      (number))
    (vec3
      (number)
      (number)
      (number)))
  (cell_parameters
    (identifier)
    (vec3
      (number)
      (number)
      (number))
    (vec3
      (number)
      (number)
      (number))
    (vec3
      (number)
      (number)
      (number))))
